installation/ingress/nginx-ingress/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: tekton-ui
  namespace: tekton-pipelines
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2


spec:
  rules:
    - host: tekui.com
      http:
        paths:
          - path: /ui(/|$)(.*)
            backend:
              serviceName: tekton-dashboard
              servicePort: 9097
